--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,12 +1,14 @@
 .header {
-  background-color: $accent;
-  padding: 20px;
-  min-height: 15rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: darken($accent, 55%);
+  text-align: center;
+  background-color: darken($accent, 25%);
+  padding: 20px;
+  min-height: 15rem;
+  color: $accent;
+  margin-bottom: 1rem;
 
   h1 {
     font-size: 3.25rem;
