--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,8 +9,8 @@
 }
 
 body {
-  color: $black;
-  background-color: $white;
+  background-color: $black;
+  color: $white;
 }
 
 h1,
@@ -21,6 +21,7 @@ h5,
 h6 {
   font-family: "Playfair Display", serif;
   font-weight: 800;
+  line-height: 1.35em;
 }
 
 h1 {
@@ -58,4 +59,19 @@ a.btn {
   font-family: "Manrope", sans-serif;
   font-weight: 450;
   font-size: 1rem;
+  line-height: 1.5em;
+}
+
+a {
+  color: lighten($accent, 35%);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+::selection {
+  color: $white;
+  background-color: $accent;
 }
