--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,6 @@
-$white: #d5f3da;
-$black: #060f02;
 $accent: #2b9b69;
+$white: lighten($accent, 55%);
+$black: darken($accent, 50%);
 
 :export {
   white: $white;
