--- a/components/VerticalColumns.module.scss
+++ b/components/VerticalColumns.module.scss
@@ -1,9 +1,29 @@
 .verticalColumnContainer {
   margin-top: 1rem;
+  margin: 1rem auto 1rem auto;
   display: flex;
-  width: 100%;
+  width: clamp(25rem, 60rem, 98%);
+  gap: 5px;
 }
 
 .verticalColumn {
   flex: 1;
+  // background-color: rgba($white, 5%);
+  background: rgba(255, 255, 255, 0.1);
+  background: linear-gradient(
+    45deg,
+    rgba($white, 0.05) 0%,
+    rgba($white, 0.16) 65%,
+    rgba($white, 0.075) 100%
+  );
+  outline: 2px solid rgba($white, 0.25);
+  outline-offset: -2px;
+  border-radius: 10px;
+  padding: 15px 25px;
+}
+
+@media (max-width: 768px) {
+  .verticalColumnContainer {
+    flex-direction: column;
+  }
 }
