--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,7 @@
 body {
   background-color: $black;
   color: $white;
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -22,6 +23,7 @@ h6 {
   font-family: "Playfair Display", serif;
   font-weight: 800;
   line-height: 1.35em;
+  margin-bottom: 0.075em;
 }
 
 h1 {
