--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -1,13 +1,17 @@
 .footer {
-  margin: 1rem;
-  border-radius: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  display: block;
+  // margin: 1rem;
+  // border-radius: 0.5rem;
   text-align: center;
-  padding: 0.25rem;
+  // padding: 0.25rem;
+  padding: 0;
   background-color: darken($accent, 25%);
-  vertical-align: middle;
-  height: 2.5rem;
+  // vertical-align: middle;
+  // height: 2.5rem;
 
-  * {
-    line-height: 2rem !important;
-  }
+  // * {
+  //   line-height: 2rem !important;
+  // }
 }
