--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,7 +51,7 @@ h6 {
 }
 
 p {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.75rem;
 }
 
 p,
@@ -80,4 +80,12 @@ a {
 
 .centred {
   text-align: center;
+}
+
+.seperator {
+  background-color: rgba(255, 255, 255, 0.15);
+  width: 100%;
+  height: 2px;
+  margin: 1rem 0;
+  border-radius: 1px;
 }
